# rideflow

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  SATFLOW-PLAN.md  docker-compose.yml
connect/: Dockerfile
connect/connectors/: debezium-postgres.json
docs/: 01-architecture.md  02-schemas.md  03-tuning.md  04-checklist.md  05-claude-code-brief.md
experiments/: README.md
flink-jobs/: Dockerfile  pyproject.toml
flink-jobs/jobs/: 01_hot_zones.py  02_surge_pricing.py  03_idle_detector.py  04_ride_matching.py  05_anomaly_detection.py  06_ride_enrichment.py
ingest-api/: Dockerfile  pyproject.toml
ingest-api/app/: config.py  h3util.py  main.py  producers.py  schemas.py
postgres/init/: 01-wal-logical.sql  02-schema.sql  03-seed.sql
query-api/: Dockerfile  pyproject.toml
query-api/app/: config.py  main.py  pg_client.py  redis_client.py
schemas/: anomaly_detected.avsc  deregister.sh  dlq_record.avsc  driver_location_pinged.avsc  register.sh  ride_lifecycle_changed.avsc  ride_requested.avsc
schemas/common/: Envelope.avsc  GeoPoint.avsc
scripts/: register_debezium.sh  reset.sh  smoke.sh  tools.sh
simulator/: Dockerfile  pyproject.toml
simulator/app/: city.py  config.py  events.py  main.py  rides.py
