[project]
name = "rideflow-query-api"
version = "0.1.0"
description = "RideFlow query API — read path (Phase 0.7)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "redis[hiredis]==5.0.8",
    "asyncpg==0.30.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "structlog==24.4.0",
]

[tool.uv]
package = false
